src/objects/Resource_Pool__c.object
<CustomObject>
    <description>Resource availability</description>
    <fields>
        <fullName>Current_Position__c</fullName>
        <description>Current Position / Account the resource is engaged with.</description>
        <inlineHelpText>Current Position / Account</inlineHelpText>
        <label>Current Position</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Available_Date__c</fullName>
        <description>Resource available date</description>
        <inlineHelpText>Resource available date</inlineHelpText>
        <label>Next Available Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Position_Allotment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be referred to the position ID</description>
        <inlineHelpText>This field will be referred to the position ID</inlineHelpText>
        <label>Position Allotment</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Resource Pool</relationshipLabel>
        <relationshipName>Resource_Pool</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position_Name__c</fullName>
        <formula>Position_Allotment__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Email__c</fullName>
        <description>This field gets Inserted/updated by workflow rule</description>
        <label>Profile Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Profile_First_Name__c</fullName>
        <formula>Profile_ID__r.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Profile ID</label>
        <referenceTo>Profile__c</referenceTo>
        <relationshipLabel>Resource Pool</relationshipLabel>
        <relationshipName>Resource_Pool</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile_Last_Name__c</fullName>
        <formula>Profile_ID__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <formula>HYPERLINK(Profile_ID__r.Id,   Profile_ID__r.First_Name__c + &quot; &quot; +  Profile_ID__r.Last_Name__c , &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <formula>Position_Allotment__r.Project__r.Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <label>Resource Pool</label>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Resource Pool No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Pool</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validation_For_Current_Position</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(Position_Allotment__r.Status__c, &apos;E-Filled&apos;),
ISPICKVAL(Current_Position__c ,&apos;Yes&apos;), ISNEW() )</errorConditionFormula>
        <errorMessage>There is already a resource allocated to this position</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_To_Add_Resource_Pool</fullName>
        <active>false</active>
        <description>RM cannot add more resource pool entries for a status “E-Filled ,
G-Completed ,H- On Hold  or F-Cancelled &quot;.</description>
        <errorConditionFormula>AND( ISNEW(),
OR(
ISPICKVAL( Position_Allotment__r.Status__c, &quot;E-Filled&quot;),
ISPICKVAL( Position_Allotment__r.Status__c, &quot;G-Completed&quot;),
ISPICKVAL( Position_Allotment__r.Status__c, &quot;H- On Hold&quot;),
ISPICKVAL( Position_Allotment__r.Status__c, &quot;F-Cancelled&quot;)
) )</errorConditionFormula>
        <errorMessage>You can not add more resource pool items to this position.</errorMessage>
    </validationRules>
</CustomObject>